2010-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_options): Null-terminate the "set term lua ..."
	command string at the first semicolon before passing it to lua.

2010-10-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Protect against the case that the x11 colormap is not
	partitioned identically to the palette.

2010-10-06  Marco Cammarata  <marcocamma@users.sourceforge.net>

	* docs/psdoc/ps_symbols.gpi: "set angle radian"

2010-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/pm3d.c src/pm3d.h set.c show.c docs/gnuplot.doc:
	Simplify the syntax for "set pm3d hidden3d". A linestyle is no longer
	required.  If no linestyle is given, the line properties are taken from
	the plot command line.
	Bug #2997853

2010-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c (quantize_gray) src/getcolor.h src/gplt_x11.c:
	Continuation of defined palette revamp (2010-10-01). Break out the
	new code into a separate subroutine that can be shared with gnuplot_x11.

	* src/color.c (draw_inside_color_smooth_box_bitmap):
	Assign colors to component colorbox rectangles by rounding the pixel
	coordinate up rather than down.  This empirically gives better results
	in gd.trm, and doesn't seem to hurt other terminals.

	* term/post.trm term/pslatex.trm term/svg.trm term/PostScript/cp1251.ps
	src/term_api.h src/term.c docs/gnuplot.doc: Add support for codepage 1251,
	an alternative 8-bit Cyrillic encoding.

2010-10-04  Matthew Biggar  <biggarm@users.sourceforge.net>

	* src/Makefile.am src/alloc.c:  Architecture (Alpha) specific work-
	around to insure that gp_malloc() does not fail on error if 0 bytes are
	successfully allocated.

2010-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stdfn.c (not_a_number): Although DJGPP version 2.04 is reported
	to support atod("NaN"), this version is not universal. Switch to using
	an explicit bit pattern for NaN.
